tests/toylang/pos/000100_cdrc2.toylang
program a = { if 0 then a = a else sleep; } .
