tests/toylang/neg/001176_mutation.toylang
program a = { 0 if a then sleep; } .
